--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "components": "^0.1.0",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
