--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capture",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dev-Danial.github.io/react-capture-porfolio",
+  "homepage": "https://dev-Danialw.github.io/capture-porfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
